 * Added an optional human-friendly `site_name` field to sites (Timo Rieber)
 * Added a system check to warn developers who use a custom Wagtail build but forgot to build the admin css
 * Added success message after updating image from the image upload view (Christian Peters)
 * Added a `request.is_preview` variable for templates to distinguish between previewing and live (Denis Voskvitsov)
 * New translations for Arabic and Latvian
 * 'Pages' link on site stats dashboard now links to the site homepage when only one site exists, rather than the root level
 * Fix: Images and page revisions created by a user are no longer deleted when the user is deleted (Rich Atkinson)
 * Fix: HTTP cache purge now works again on Python 2 (Mitchel Cabuloy)
 * Fix: Locked pages can no longer be unpublished (Alex Bridge)
 * Fix: Site records now implement `get_by_natural_key`
 * Fix: Creating pages at the root level (and any other instances of the base `Page` model) now properly respects the `parent_page_types` setting
 * Fix: Settings menu now opens correctly from the page editor and styleguide views
 * Fix: `subpage_types` / `parent_page_types` business rules are now enforced when moving pages
 * Fix: Multi-word tags on images and documents are now correctly preserved as a single tag (LKozlowski)
 * Fix: Changed verbose names to start with lower case where necessary (Maris Serzans)
 * Fix: Invalid images no longer crash the image listing (Maris Serzans)
 * Fix: `MenuItem` `url` parameter can now take a lazy URL (Adon Metcalfe, rayrayndwiga)
 * Fix: Added missing translation tag to InlinePanel 'Add' button (jnns)
 * Fix: Added missing translation tag to 'Signing in...' button text (Eugene MechanisM)
 * Fix: Restored correct highlighting behaviour of rich text toolbar buttons
 * Fix: Rendering a missing image through ImageChooserBlock no longer breaks the whole page (Christian Peters)
 * Fix: Filtering by popular tag in the image chooser now works when using the database search backend